make Groups generic
