# src/app/controllers/index.ts
@@ -1,11 +1,11 @@
 export * from "./account.controller";
-export * from "./accountGroup.controller";
 export * from "./auth.controller";
 export * from "./authTest.controller";
 export * from "./entity.controller";
 export * from "./field.controller";
 export * from "./fieldDatum.controller";
 export * from "./fieldType.controller";
+export * from "./group.controller";
 export * from "./tag.controller";
 export * from "./template.controller";
 export * from "./transaction.controller";
