# src/app/routes/index.ts
@@ -1,5 +1,4 @@
 import express from "express";
-import { setAccountGroupRoutes } from "./accountGroup.routes";
 import { setAccountRoutes } from "./account.routes";
 import { setAuthRoutes } from "./auth.routes";
 import { setAuthTestRoutes } from "./authTest.routes";
@@ -7,6 +6,7 @@ import { setEntityRoutes } from "./entity.routes";
 import { setFieldDatumRoutes } from "./fieldDatum.routes";
 import { setFieldRoutes } from "./field.routes";
 import { setFieldTypeRoutes } from "./fieldType.routes";
+import { setGroupRoutes } from "./group.routes";
 import { setTagRoutes } from "./tag.routes";
 import { setTemplateRoutes } from "./template.routes";
 import { setTransactionRoutes } from "./transaction.routes";
@@ -14,12 +14,12 @@ import { setUserRoutes } from "./user.routes";
 
 export default function setAllRoutes(app: express.Express): void {
   setAccountRoutes(app);
-  setAccountGroupRoutes(app);
   setAuthRoutes(app);
   setEntityRoutes(app);
   setFieldRoutes(app);
   setFieldDatumRoutes(app);
   setFieldTypeRoutes(app);
+  setGroupRoutes(app);
   setTagRoutes(app);
   setTemplateRoutes(app);
   setTransactionRoutes(app);
